--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@rbxts/luau-polyfill",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"main": "out/init.lua",
 	"repository": "https://github.com/howmanysmall/luau-polyfill.git",
 	"author": "HowManySmall",
@@ -8,7 +8,7 @@
 	"scripts": {
 		"build": "rbxtsc",
 		"watch": "rbxtsc -w",
-		"prepublishOnly": "bun run build"
+		"prepublishOnly": "npm run build"
 	},
 	"types": "out/index.d.ts",
 	"files": ["out", "!**/*.tsbuildinfo"],
